[package]
name = "manuk-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Networking layer: hyper/rustls/tokio HTTP(S) fetch. See CLAUDE.md."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
url.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http.workspace = true
http-body-util.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
rustls-pki-types.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
# Calling the connector's `Service<Uri>` directly for speculative preconnect (warm
# TCP+TLS without an HTTP request). Already in the tree transitively.
tower-service = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
