[package]
name = "manuk-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Networking layer: hyper/rustls/tokio HTTP(S) fetch. See CLAUDE.md."

[features]
default = []
# Native content-blocking (E5) via Brave's `adblock` crate (EasyList/uBO syntax).
# Opt-in — it is a sizeable dep, and blocking is a privacy feature, not core net.
adblock = ["dep:adblock"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
url.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http.workspace = true
http-body-util.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
rustls-pki-types.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
# Cross-session cookie persistence (U6): serialize the jar's persistent cookies to disk.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Calling the connector's `Service<Uri>` directly for speculative preconnect (warm
# TCP+TLS without an HTTP request). Already in the tree transitively.
tower-service = "0.3"
psl = "2"
tokio-socks = "0.5"
tokio-rustls = "0.26"
# Native content-blocking (E5), feature-gated. Brave's audited adblock engine.
# Keep default features (embedded-domain-resolver, full-regex-handling).
adblock = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
