[package]
name = "manuk-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Networking layer: hyper/rustls/tokio HTTP(S) fetch. See CLAUDE.md."

[features]
default = []
# Native content-blocking (E5) via Brave's `adblock` crate (EasyList/uBO syntax).
# Opt-in — it is a sizeable dep, and blocking is a privacy feature, not core net.
adblock = ["dep:adblock"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
url.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
http.workspace = true
http-body-util.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
rustls-pki-types.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
# Cross-session cookie persistence (U6): serialize the jar's persistent cookies to disk.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Calling the connector's `Service<Uri>` directly for speculative preconnect (warm
# TCP+TLS without an HTTP request). Already in the tree transitively.
tower-service = "0.3"
psl = "2"
tokio-socks = "0.5"
# ⚠ `default-features = false` is load-bearing. tokio-rustls's DEFAULTS enable `rustls/aws-lc-rs`,
# which drags in `aws-lc-sys` — a C/asm crypto backend needing NASM+CMake — and on Windows that fails
# the link outright (`link.exe: exit code 1104`). Every other rustls dependency here is already pinned to
# the pure-Rust `ring` backend; this one silently was not, and cargo's feature UNION meant one unpinned
# declaration re-enabled aws-lc for the whole graph. It is the single reason the Windows build died.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# Native content-blocking (E5), feature-gated. Brave's audited adblock engine.
# Keep default features (embedded-domain-resolver, full-regex-handling).
adblock = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
