[package]
name = "manuk-page"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The shared page pipeline: bytes -> DOM -> style -> layout -> paint. Used by the headful shell and the headless agent."

[dependencies]
manuk-net.workspace = true
manuk-html.workspace = true
manuk-dom.workspace = true
manuk-a11y.workspace = true
manuk-css.workspace = true
manuk-layout.workspace = true
manuk-text.workspace = true
manuk-paint.workspace = true
manuk-js.workspace = true
anyhow.workspace = true
url.workspace = true
tracing.workspace = true
base64.workspace = true
# Raster image decoding (pure-Rust formats). AVIF (C dav1d) is intentionally left off.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico"] }

[features]
# Execute page <script> via SpiderMonkey (forwarded to manuk-js). Off by default:
# run_document_scripts is a no-op without it, so the parse/layout path is unchanged.
spidermonkey = ["manuk-js/spidermonkey"]
spidermonkey-noicu = ["manuk-js/spidermonkey-noicu"]

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "pipeline"
harness = false
