[package]
name = "manuk-page"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The shared page pipeline: bytes -> DOM -> style -> layout -> paint. Used by the headful shell and the headless agent."

[dependencies]
manuk-net.workspace = true
manuk-html.workspace = true
manuk-dom.workspace = true
manuk-a11y.workspace = true
manuk-css.workspace = true
manuk-layout.workspace = true
manuk-text.workspace = true
manuk-paint.workspace = true
manuk-js.workspace = true
anyhow.workspace = true
url.workspace = true
tracing.workspace = true
base64.workspace = true
# `tokio::spawn` for the preload scanner's concurrent cache-warming fetches.
tokio = { workspace = true, features = ["rt"] }
# Concurrent subresource fetching (join_all) — overlaps image/font/CSS network waits
# on the shared pooled client instead of awaiting them serially.
futures-util = { workspace = true, features = ["alloc"] }
# Raster image decoding (pure-Rust formats). AVIF (C dav1d) is intentionally left off.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico"] }
# SVG rasterization (logos/icons) — usvg parses, resvg renders to a bitmap.
resvg = "0.44"

[features]
# Route the cascade through the real Stylo engine (full selectors/@media/var()) instead
# of the from-scratch MinimalCascade. Heavy to build, so opt-in; forwarded to manuk-css.
stylo = ["manuk-css/stylo"]
# Execute page <script> via SpiderMonkey (forwarded to manuk-js). Off by default:
# run_document_scripts is a no-op without it, so the parse/layout path is unchanged.
spidermonkey = ["manuk-js/spidermonkey"]
spidermonkey-noicu = ["manuk-js/spidermonkey-noicu"]

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
tokio = { workspace = true, features = ["rt", "macros"] }
# Parse the decoded sfnt in the live web-font test (A3, #[ignore]d network test).
fontdb.workspace = true

[[bench]]
name = "pipeline"
harness = false
