[package]
name = "manuk-wpt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Web Platform Tests harness + results tracking. Ground-truth conformance."
publish = false

[features]
# Run the parity/reftest harness against the real Stylo cascade instead of MinimalCascade.
stylo = ["manuk-page/stylo"]
# Run page JS (SpiderMonkey) — off by default so the parity gate stays lean/fast. Enable it for
# `manuk-wpt render` when the page you want to screenshot builds itself with JS (custom elements,
# SPA hydration): `cargo run -p manuk-wpt --release --features spidermonkey -- render ...`
spidermonkey = ["manuk-page/spidermonkey"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "manuk-wpt"
path = "src/main.rs"

[dependencies]
manuk-dom.workspace = true
manuk-html.workspace = true
manuk-css.workspace = true
manuk-layout.workspace = true
manuk-text.workspace = true
manuk-page.workspace = true
manuk-paint.workspace = true
anyhow.workspace = true
serde_json.workspace = true
