[package]
name = "manuk-wpt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Web Platform Tests harness + results tracking. Ground-truth conformance."
publish = false

[features]
# ADR-011: the gates MUST run the SHIPPING configuration. The shell ships Stylo; gating on
# MinimalCascade measured a cascade no user ever sees (and understated fidelity by ~5 points while
# hiding a near-total Wikipedia layout failure). Stylo is therefore ON BY DEFAULT here.
default = ["stylo"]
stylo = ["manuk-page/stylo"]
# Run page JS (SpiderMonkey) — off by default so the parity gate stays lean/fast. Enable it for
# `manuk-wpt render` when the page you want to screenshot builds itself with JS (custom elements,
# SPA hydration): `cargo run -p manuk-wpt --release --features spidermonkey -- render ...`
spidermonkey = ["manuk-page/spidermonkey"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "manuk-wpt"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
manuk-dom.workspace = true
manuk-html.workspace = true
manuk-css.workspace = true
manuk-layout.workspace = true
manuk-text.workspace = true
manuk-page.workspace = true
manuk-paint.workspace = true
anyhow.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde_json.workspace = true
