[package]
name = "manuk-wpt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Web Platform Tests harness + results tracking. Ground-truth conformance."
publish = false

[features]
# ADR-011: the gates MUST run the SHIPPING configuration. The shell ships Stylo **and**
# SpiderMonkey; a gate that runs anything else measures a browser no user has.
#
# Stylo: gating on MinimalCascade measured a cascade no user ever sees (understated fidelity by ~5
# points while hiding a near-total Wikipedia layout failure).
#
# SpiderMonkey: gating without JS measured a page no user ever sees. Chromium runs the page's
# scripts; a no-JS Manuk does not — so the comparison charged the ENGINE for the absence of the
# SCRIPT ENGINE. Wikipedia ships `<html class="client-nojs">` and MediaWiki's startup script swaps
# it to `client-js`, which is what collapses the table of contents. Without JS our TOC stayed fully
# expanded — 1,949px instead of 364px — and dragged every element on the page ~5,000px out of
# place. That is not a layout bug; it is a harness bug, and it was the single largest term in the
# placement error.
default = ["stylo", "spidermonkey"]
stylo = ["manuk-page/stylo"]
spidermonkey = ["manuk-page/spidermonkey"]

[dependencies.http-body-util]
workspace = true

[dependencies.hyper]
workspace = true

[dependencies.hyper-util]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "manuk-wpt"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
manuk-dom.workspace = true
manuk-html.workspace = true
manuk-css.workspace = true
manuk-layout.workspace = true
manuk-text.workspace = true
manuk-page.workspace = true
manuk-js.workspace = true
manuk-net.workspace = true
manuk-paint.workspace = true
anyhow.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde_json.workspace = true
# The harness runs the real engine; when a page's script throws, or a subresource fails, the engine
# says so via `tracing`. Without a subscriber those diagnostics are silently dropped — which is how
# a page script that never ran looked like a layout bug for an hour. `RUST_LOG=debug` to see them.
tracing.workspace = true
tracing-subscriber = { workspace = true }
